--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -36,7 +36,7 @@ import Logo from "./Logo.astro";
       position: absolute;
       background: rgb(0, 0, 0);
       z-index: -1;
-      filter: blur(600px);
+      filter: blur(100px);
       border-radius: 50%;
       width: 800%;
       height: 600%;
@@ -57,6 +57,7 @@ import Logo from "./Logo.astro";
       rgba(0, 0, 0, 0.46) 100%
     );
     border-radius: 4em;
+    backdrop-filter: blur(40px);
     &::before {
       content: "";
       position: absolute;
@@ -96,7 +97,7 @@ import Logo from "./Logo.astro";
       position: absolute;
       background: rgb(0, 0, 0);
       z-index: -1;
-      filter: blur(600px);
+      filter: blur(100px);
       border-radius: 50%;
       width: 50vw;
       height: 500%;
