--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,13 +7,14 @@ import Logo from "./Logo.astro";
     <Logo />
   </a>
   <nav>
-    <a href='/services'>Développement full stack</a>
-    <a href='/services'>Création de sites web</a>
-    <a href='/portfolio'>Réalisations</a>
-    <a href='/qui-je-suis'>Qui je suis</a>
+    <span class="intro">Vous souhaitez :</span>
+    <a href='/services'>Un site web</a>
+    <a href='/services'>Un dev fullstack</a>
+    <a href='/portfolio'>Voir mes réalisations</a>
+    <a href='/qui-je-suis'>Savoir qui je suis</a>
   </nav>
   <button class='contactButton'
-    >Contact
+    >Me contacter
     <span class='border'></span>
     <span class='border'></span>
     <span class='border'></span>
@@ -22,58 +23,30 @@ import Logo from "./Logo.astro";
 
 <style lang='scss'>
   header {
+    position: fixed;
     display: flex;
+    width: 100vw;
     justify-content: center;
     align-items: center;
-    padding: 2em 0;
+    padding: 2em 12%;
+    backdrop-filter: blur(5px); 
+    background: linear-gradient(191.71deg, rgba(0, 0, 0, 0.63) 1.22%, rgba(0, 0, 0, 0.07) 92.57%);
   }
   #logo {
     margin-right: auto;
     position: relative;
-    &::before {
-      content: "";
-      display: block;
-      position: absolute;
-      background: rgb(0, 0, 0);
-      z-index: -1;
-      filter: blur(100px);
-      border-radius: 50%;
-      width: 800%;
-      height: 600%;
-      bottom: -150%;
-      right: -150%;
-    }
   }
   nav {
     display: flex;
     align-items: center;
-    gap: 4em;
+    gap: 2em;
     padding: 1em 3em;
     position: relative;
     overflow: hidden;
-    background: linear-gradient(
-      204.1deg,
-      rgba(255, 255, 255, 0.3) 0%,
-      rgba(0, 0, 0, 0.46) 100%
-    );
-    border-radius: 4em;
-    backdrop-filter: blur(40px);
-    &::before {
-      content: "";
-      position: absolute;
-      z-index: -1;
-      inset: 0;
-      padding: 2px;
-      border-radius: 4em;
-      background: linear-gradient(45deg, #fff 15%, transparent 108%);
-      -webkit-mask:
-        linear-gradient(#fff 0 0) content-box,
-        linear-gradient(#fff 0 0);
-      mask:
-        linear-gradient(#fff 0 0) content-box,
-        linear-gradient(#fff 0 0);
-      -webkit-mask-composite: xor;
-      mask-composite: exclude;
+    .intro {
+      font-style: italic;
+      color: white;
+      font-weight: 300;
     }
     a {
       color: white;
@@ -89,22 +62,8 @@ import Logo from "./Logo.astro";
     font-size: 1.25em;
     font-weight: bold;
     position: relative;
-    padding: 1em 2em;
+    padding: 1em 1em;
     cursor: pointer;
-    &::before {
-      content: "";
-      display: block;
-      position: absolute;
-      background: rgb(0, 0, 0);
-      z-index: -1;
-      filter: blur(100px);
-      border-radius: 50%;
-      width: 50vw;
-      height: 500%;
-      bottom: -150%;
-      right: 50%;
-      transform: translateX(50%);
-    }
     .border {
       position: absolute;
       border: 1px solid white;
