--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,9 @@ const { title } = Astro.props;
 			white 60%
 		);
 	}
+	* {
+		box-sizing: border-box;
+	}
 	html {
 		font-family: system-ui, sans-serif;
 		background: #13151a;
