--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,6 +53,7 @@ import Layout from "../layouts/Layout.astro";
   
   main {
     background: url("/images/bg.jpg");
+    background-color: #000;
     background-size: cover;
     min-height: 100vh;
     padding-top: 10em;
