--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ import Layout from "../layouts/Layout.astro";
     background-color: #000;
     background-size: cover;
     min-height: 100vh;
-    padding-top: 10em;
+    padding-top: 165px;
   }
 
   a {
