Oh yeah hero qui suit la mouse

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ import Layout from "../layouts/Layout.astro";
   }
   
   main {
-    background: url("/images/bg.jpg");
+    background: url("/images/bg.webp");
     background-color: #000;
     background-size: cover;
     min-height: 100vh;
