--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -187,6 +187,7 @@
     right: 20%;
     width: 15rem;
     height: 15rem;
+    z-index: 1;
     .contactAvatar {
       width: 100%;
       height: 100%;
