--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,6 +31,7 @@ import Logo from "./Logo.astro";
     padding: 2em 12%;
     backdrop-filter: blur(5px); 
     background: linear-gradient(191.71deg, rgba(0, 0, 0, 0.63) 1.22%, rgba(0, 0, 0, 0.07) 92.57%);
+    z-index: 500;
   }
   #logo {
     margin-right: auto;
@@ -43,6 +44,7 @@ import Logo from "./Logo.astro";
     padding: 1em 3em;
     position: relative;
     overflow: hidden;
+    font-size: 1.25rem;
     .intro {
       font-style: italic;
       color: white;
