--- a/src/components/SquareHammer.astro
+++ b/src/components/SquareHammer.astro
@@ -42,6 +42,7 @@
         text-align: center;
         transform: rotate(45deg);
         font-size: 2rem;
+        color: #4f4f4f;
       }
     }
   }
