--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -64,7 +64,7 @@ import Logo from "./Logo.astro";
     font-size: 1.25em;
     font-weight: bold;
     position: relative;
-    padding: 1em 1em;
+    padding: 1em;
     cursor: pointer;
     .border {
       position: absolute;
