--- a/src/components/WebsiteCreation.astro
+++ b/src/components/WebsiteCreation.astro
@@ -10,7 +10,7 @@ import SquareHammer from "./SquareHammer.astro";
   </p>
   <SquareHammer class='squareHammer' />
   <svg
-    class="circle"
+    class='circle'
     viewBox='0 0 865 1223'
     fill='none'
     xmlns='http://www.w3.org/2000/svg'
@@ -26,6 +26,11 @@ import SquareHammer from "./SquareHammer.astro";
       stroke-linejoin='round'
       stroke-dasharray='12 12'></rect>
   </svg>
+  <button class='services'
+    >Découvrir mes services
+    <span class='border'></span><span class='border'></span><span class='border'
+    ></span>
+  </button>
 </section>
 
 <style lang='scss'>
@@ -54,7 +59,7 @@ import SquareHammer from "./SquareHammer.astro";
     }
     :global(.squareHammer) {
       position: absolute;
-      right: 55%;
+      right: 60%;
       bottom: 16rem;
       z-index: 2;
     }
@@ -65,6 +70,41 @@ import SquareHammer from "./SquareHammer.astro";
       left: -20rem;
       bottom: -10rem;
       z-index: 1;
+    }
+    .services {
+      position: absolute;
+      bottom: 20rem;
+      right: 30%;
+      font-size: 1.25rem;
+      border: none;
+      background-color: transparent;
+      font-weight: bold;
+      transform: rotate(-2deg);
+      color: #4f4f4f;
+      cursor: pointer;
+      padding: 1em;
+      &::after {
+        content: url("/images/servicesArrow.svg");
+        position: absolute;
+        bottom: 100%;
+        right: 65%;
+      }
+      .border {
+        position: absolute;
+        border: 1px solid #4f4f4f;
+        border-radius: 4em;
+        width: 100%;
+        height: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        &:first-of-type {
+          transform: translate(calc(-50% - 7px), calc(-50% - 7px));
+        }
+        &:last-of-type {
+          transform: translate(calc(-50% + 7px), calc(-50% + 7px));
+        }
+      }
     }
   }
 </style>
