--- a/src/components/LastWork.astro
+++ b/src/components/LastWork.astro
@@ -1,24 +1,63 @@
-<section class="lastWork">
+---
+import BorderedButton from "./BorderedButton.astro";
+---
+
+<section class='lastWork'>
   <h2>Last work</h2>
+  <div class='lastWorkGrid'>
+    <div class="gridText">
+      <p>
+        Paragraphe sur la dernière TOP réalisation paragraphe sur la dernière
+        TOP réalisation paragraphe sur la dernière TOP réalisation
+      </p>
+      <BorderedButton
+        >Découvrir mes réalisations
+      </BorderedButton>
+    </div>
+    <div class='gridImage'>
+      <img src='/images/lastWork.png' alt='Last work' />
+    </div>
+  </div>
 </section>
 
-<style lang="scss">
+<style lang='scss'>
   .lastWork {
-    background: url('/images/bg2.jpg');
-    background-size: 100%;
-    background-position: center;
-    min-height: 100vh;
+    background: url("/images/bg2.jpg");
+    background-size: cover;
+    background-position: bottom;
+    min-height: calc(127vw - 70rem);
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 8rem;
+    padding-top: 70rem;
     h2 {
       color: rgba(255, 255, 255, 0.4);
       font-weight: bold;
       font-size: 11rem;
       line-height: 1;
       max-width: 60vw;
-      position: absolute;
-      top: 0;
-      right: 0;
-      margin: 0;
+      align-self: flex-end;
+      z-index: 12;
+    }
+    p {
+      color: white;
+      font-size: 2rem;
+    }
+    .gridText {
+      margin-top: 5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 5rem;
+      align-items: flex-start;
+    }
+    .lastWorkGrid {
+      display: grid;
+      grid-template-columns: 30% 1fr;
+      margin: 0 12%;
+    }
+    .gridImage {
+      padding-top: 5rem;
     }
   }
 </style>
