--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,5 @@
 ---
+import BorderedButton from "./BorderedButton.astro";
 import Logo from "./Logo.astro";
 ---
 
@@ -13,12 +14,9 @@ import Logo from "./Logo.astro";
     <a href='/portfolio'>Voir mes réalisations</a>
     <a href='/qui-je-suis'>Savoir qui je suis</a>
   </nav>
-  <button class='contactButton'
+  <BorderedButton
     >Me contacter
-    <span class='border'></span>
-    <span class='border'></span>
-    <span class='border'></span>
-  </button>
+  </BorderedButton>
 </header>
 
 <style lang='scss'>
@@ -29,7 +27,7 @@ import Logo from "./Logo.astro";
     justify-content: center;
     align-items: center;
     padding: 2em 12%;
-    backdrop-filter: blur(5px); 
+    backdrop-filter: blur(10px); 
     background: linear-gradient(191.71deg, rgba(0, 0, 0, 0.63) 1.22%, rgba(0, 0, 0, 0.07) 92.57%);
     z-index: 500;
   }
@@ -54,33 +52,6 @@ import Logo from "./Logo.astro";
       color: white;
       text-decoration: none;
       padding: 1em;
-    }
-  }
-  .contactButton {
-    margin-left: auto;
-    border: none;
-    background: transparent;
-    color: white;
-    font-size: 1.25em;
-    font-weight: bold;
-    position: relative;
-    padding: 1em;
-    cursor: pointer;
-    .border {
-      position: absolute;
-      border: 1px solid white;
-      border-radius: 4em;
-      width: 100%;
-      height: 100%;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) rotate(-5deg);
-      &:first-of-type {
-        transform: translate(calc(-50% - 7px), calc(-50% - 7px)) rotate(-5deg);
-      }
-      &:last-of-type {
-        transform: translate(calc(-50% + 7px), calc(-50% + 7px)) rotate(-5deg);
-      }
     }
   }
 </style>
