--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -7,7 +7,7 @@ import BorderedButton from "./BorderedButton.astro";
   <h2>
     Et si on discutait de <strong>vos projets</strong><br /><em>ensemble ?</em>
   </h2>
-  <BorderedButton>
+  <BorderedButton addedClasses="contactButton">
     <svg
       width='52'
       height='38'
@@ -112,5 +112,9 @@ import BorderedButton from "./BorderedButton.astro";
         animation: fog1movement 20s linear infinite reverse;
       }
     }
+  }
+  :global(.contactButton) {
+    z-index: 2;
+    padding: 2rem 3rem !important;
   }
 </style>
