--- a/src/pages/button.astro
+++ b/src/pages/button.astro
@@ -1,51 +1,50 @@
 <div class='test'>
-  <div class="testDiv"></div>
   <button class='button'> coucou</button>
 </div>
 
 <style lang='scss'>
   .test {
-    background-color: black;
-    padding: 10rem;
-    z-index: -2;
-    position: relative;
-  }
-  .testDiv {
-    width: 100px;
-    height: 100px;
-    background-color: blue;
-    position: relative;
-    &::after {
-      content: '';
-      width: 110px;
-      height: 110px;
-      position: absolute;
-      background-color: pink;
-      z-index: -1;
-    }
+    background: url('/images/bg-purple.jpg');
+    padding: 10rem 3rem;
   }
   .button {
     color: white;
     position: relative; /* or absolute */
     font-size: 5rem;
-    background-color: black;
-    border: 1px solid grey;
+    background: #FFFFFF0A;
+    border: 1px solid white;
     border-radius: 5rem;
     padding: 2rem;
+    backdrop-filter: blur(5px);
     &::before {
       content: "";
       position: absolute;
-      border-radius: 5rem;
       top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: transparent;
-      box-shadow: inset 1px 1px 0px white;
+      left: 5rem;
+      width: calc(50% - 5rem);
+      height: 10px;
+      background: radial-gradient(farthest-side, #ffffff, #ffffff00);
+      transform: translate(0, -55%);
       transition: transform 0.2s;
     }
-    &:hover::before {
-      transform: rotate(180deg);
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      right: 5rem;
+      width: calc(50% - 5rem);
+      height: 10px;
+      background: radial-gradient(farthest-side, #ffffff, #ffffff00);
+      transform: translate(0, 55%);
+      transition: transform 0.2s;
+    }
+    &:hover {
+      &::before {
+        transform: translate(100%, -55%);
+      }
+      &::after {
+        transform: translate(-100%, 55%);
+      }
     }
   }
 </style>
