Smooth and forced z-scroll

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Logo from "./Logo.astro";
 ---
 
 <header>
-  <a id='logo' href='/'>
+  <a id='logo' aria-label="Home page" href='/'>
     <Logo />
   </a>
   <nav>
