--- a/src/components/WebsiteCreation.astro
+++ b/src/components/WebsiteCreation.astro
@@ -34,7 +34,7 @@ import SquareHammer from "./SquareHammer.astro";
     background-color: #ccd6e8;
     box-shadow: 0 150px 150px 150px #cdd6e8, 0 -150px 150px 150px #ccd6e8;
     position: relative;
-    height: 50rem;
+    height: 100vh;
     z-index: 2;
     h2 {
       color: rgba(255, 255, 255, 0.4);
@@ -72,7 +72,7 @@ import SquareHammer from "./SquareHammer.astro";
     }
     .services {
       position: absolute;
-      top: 90rem;
+      top: 100%;
       right: 25%;
       font-size: 1.25rem;
       font-weight: bold;
