--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,31 +4,43 @@ import Logo from "./Logo.astro";
 ---
 
 <header>
-  <a id='logo' aria-label="Home page" href='/'>
+  <a id='logo' aria-label='Home page' href='/'>
     <Logo />
   </a>
   <nav>
-    <span class="intro">Vous souhaitez :</span>
+    <span class='intro'>Vous souhaitez :</span>
     <a href='/services'>Un site web</a>
     <a href='/services'>Un dev fullstack</a>
     <a href='/portfolio'>Voir mes réalisations</a>
     <a href='/qui-je-suis'>Savoir qui je suis</a>
   </nav>
-  <BorderedButton addedClasses="headerButton"
-    >Me contacter
-  </BorderedButton>
+  <BorderedButton addedClasses='headerButton'>Me contacter</BorderedButton>
+  <div class='menuMobileButton'>
+    <input type='checkbox' name='menuMobileToggle' id='menuMobileToggle' />
+    <label for='menuMobileToggle' class='menuMobileToggleLabel'>
+      <span class='burgerSlice'></span>
+      <span class='burgerSlice'></span>
+      <span class='burgerSlice'></span>
+      <span class='burgerSlice'></span>
+    </label>
+    <nav class='menuMobile'></nav>
+  </div>
 </header>
 
 <style lang='scss'>
   header {
     position: fixed;
     display: flex;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
     align-items: center;
     padding: 2em 12%;
-    backdrop-filter: blur(10px); 
-    background: linear-gradient(191.71deg, rgba(0, 0, 0, 0.63) 1.22%, rgba(0, 0, 0, 0.07) 92.57%);
+    backdrop-filter: blur(10px);
+    background: linear-gradient(
+      191.71deg,
+      rgba(0, 0, 0, 0.63) 1.22%,
+      rgba(0, 0, 0, 0.07) 92.57%
+    );
     z-index: 500;
   }
   #logo {
@@ -56,5 +68,96 @@ import Logo from "./Logo.astro";
   }
   :global(.headerButton) {
     font-size: 1.5rem;
+  }
+
+  @media screen and (max-width: 600px) {
+    header {
+      justify-content: space-between;
+      padding: 1rem;
+      height: 80px;
+      #logo {
+        width: 25vw;
+      }
+      :global(#logo svg) {
+        width: 25vw;
+      }
+      > nav {
+        display: none;
+      }
+      :global(.headerButton) {
+        display: none;
+      }
+      .menuMobileButton {
+        color: white;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        label {
+          display: block;
+          width: 100%;
+          height: 100%;
+        }
+        .burgerSlice {
+          position: absolute;
+          width: 100%;
+          height: 1px;
+          background-color: #fff;
+          border-radius: 5px;
+          transform-origin: center center;
+          transition: transform 0.2s ease-in-out;
+          &:nth-child(1) {
+            top: 0;
+          }
+          &:nth-child(2) {
+            top: 50%;
+            transform: translateY(-50%);
+          }
+          &:nth-child(3) {
+            top: 50%;
+            transform: translateY(-50%);
+          }
+          &:nth-child(4) {
+            bottom: 0;
+          }
+        }
+      }
+      #menuMobileToggle {
+        display: none;
+      }
+      #menuMobileToggle:checked ~ .menuMobile {
+        display: block;
+      }
+      #menuMobileToggle:checked ~ .menuMobileToggleLabel {
+        .burgerSlice {
+          &:nth-child(1) {
+            transform: scaleX(0);
+          }
+          &:nth-child(2) {
+            transform: translateY(-50%) rotate(45deg);
+          }
+          &:nth-child(3) {
+            transform: translateY(-50%) rotate(-45deg);
+          }
+          &:nth-child(4) {
+            transform: scaleX(0);
+          }
+        }
+      }
+      .menuMobile {
+        display: none;
+        position: fixed;
+        width: 100vw;
+        height: calc(100vh - 80px);
+        backdrop-filter: blur(10px);
+        background: linear-gradient(
+          11.71deg,
+          rgba(0, 0, 0, 0.63) 1.22%,
+          rgba(0, 0, 0, 0.07) 92.57%
+        );
+        top: 80px;
+        left: 0;
+        z-index: 500;
+      }
+    }
   }
 </style>
