--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,4 +1,4 @@
-<svg width="149" height="94" viewBox="0 0 149 94" fill="none"
+<svg viewBox="0 0 149 94" fill="none"
   xmlns="http://www.w3.org/2000/svg">
   <path d="M43.8882 71.4496L99.9051 10.7411L117.193 10.7403L63.9595 71.4503L43.8882 71.4496Z" fill="url(#paint0_linear_50_1381)" stroke="url(#paint1_linear_50_1381)"/>
   <mask id="path-2-inside-1_50_1381" fill="white">
