--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,7 @@ import Layout from "../layouts/Layout.astro";
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+    width: 100vw;
   }
 
   main {
