New websites page

--- a/src/components/BorderedButton.astro
+++ b/src/components/BorderedButton.astro
@@ -26,7 +26,7 @@ const { addedClasses = "", color = "white" } = Astro.props;
       height: 10px;
       background: radial-gradient(farthest-side, #ffffff, #ffffff00);
       transform: translate(0, -55%);
-      transition: transform 0.2s;
+      transition: transform 0.2s ease-in-out;
     }
     &::after {
       content: "";
@@ -37,7 +37,7 @@ const { addedClasses = "", color = "white" } = Astro.props;
       height: 10px;
       background: radial-gradient(farthest-side, #ffffff, #ffffff00);
       transform: translate(0, 55%);
-      transition: transform 0.2s;
+      transition: transform 0.2s ease-in-out;
     }
     &:hover {
       &::before {
