--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,10 +9,9 @@ import Logo from "./Logo.astro";
   </a>
   <nav>
     <span class='intro'>Vous souhaitez :</span>
-    <a href='/services'>Un site web</a>
+    <a href='/creation-site-web'>Un site web</a>
     <a href='/services'>Un dev fullstack</a>
     <a href='/portfolio'>Voir mes réalisations</a>
-    <a href='/qui-je-suis'>Savoir qui je suis</a>
   </nav>
   <BorderedButton addedClasses='headerButton'>Me contacter</BorderedButton>
   <div class='menuMobileButton'>
@@ -42,10 +41,17 @@ import Logo from "./Logo.astro";
       rgba(0, 0, 0, 0.07) 92.57%
     );
     z-index: 500;
+    .menuMobileButton {
+      display: none;
+    }
   }
   #logo {
     margin-right: auto;
     position: relative;
+    height: 6rem;
+    :global(svg) {
+      height: 6rem;
+    }
   }
   nav {
     display: flex;
