--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,26 +1,28 @@
 ---
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
+import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-		<Footer></Footer>
-	</body>
+<html lang='en'>
+  <head>
+    <meta charset='UTF-8' />
+    <meta name='description' content='Astro description' />
+    <meta name='viewport' content='width=device-width' />
+    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <meta name='generator' content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <Header />
+    <slot />
+    <Footer />
+  </body>
 </html>
 
 <style is:global>
@@ -28,6 +30,13 @@ import Footer from "../components/Footer.astro";
     font-family: "Poppins";
     src: url("/fonts/Poppins-Bold.ttf");
     font-weight: bold;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "Poppins";
+    src: url("/fonts/Poppins-Black.ttf");
+    font-weight: black;
     font-style: normal;
   }
 
@@ -52,28 +61,52 @@ import Footer from "../components/Footer.astro";
     font-style: normal;
   }
 
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	* {
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
+  @font-face {
+    font-family: "Poppins";
+    src: url("/fonts/Poppins-LightItalic.ttf");
+    font-weight: 200;
+    font-style: italic;
+  }
+
+  @font-face {
+    font-family: "Poppins";
+    src: url("/fonts/Poppins-BoldItalic.ttf");
+    font-weight: bold;
+    font-style: italic;
+  }
+
+  :root {
+    --accent: 136, 58, 234;
+    --accent-light: 224, 204, 250;
+    --accent-dark: 49, 10, 101;
+    --accent-gradient: linear-gradient(
+      45deg,
+      rgb(var(--accent)),
+      rgb(var(--accent-light)) 30%,
+      white 60%
+    );
+  }
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     text-decoration: none;
-	}
-	button {
-		border: none;
-		background-color: transparent;
-	}
-	body {
-		position: relative;
-	}
+  }
+  button {
+    border: none;
+    background-color: transparent;
+  }
+
+  body {
+    position: relative;
+    font-family: "Poppins";
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
+    width: 100vw;
+  }
+
+  a {
+    cursor: pointer;
+  }
 </style>
